--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/Server/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/Server/server.ts",
+    "start": "ts-node-dev --respawn --transpile-only src/Server/server.ts"
   },
   "keywords": [],
   "author": "",
