--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/Server/server.ts",
-    "start": "ts-node-dev --respawn --transpile-only src/Server/server.ts"
+    "start": "ts-node-dev src/Server/server.ts"
   },
   "keywords": [],
   "author": "",
