--- a/package.json
+++ b/package.json
@@ -4,21 +4,13 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/Server/server.ts",
-    "start": "ts-node-dev src/Server/server.ts"
+    "start": "node dist/app.js",
+    "build": "rimraf dist && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-  },
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.4",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -31,5 +23,15 @@
     "eslint-plugin-import": "^2.26.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
+
   }
 }
