--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^7.2.1",
+    "mongoose": "6.3.4",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   }
